Yacc/cparser.output
Rules useless in parser due to conflicts

   36 initialisation: epsilon


State 16 conflicts: 3 shift/reduce
State 17 conflicts: 3 shift/reduce
State 18 conflicts: 3 shift/reduce
State 20 conflicts: 3 shift/reduce
State 21 conflicts: 3 shift/reduce
State 24 conflicts: 3 shift/reduce, 19 reduce/reduce
State 25 conflicts: 3 shift/reduce
State 26 conflicts: 3 shift/reduce
State 28 conflicts: 3 shift/reduce
State 29 conflicts: 3 shift/reduce
State 30 conflicts: 3 shift/reduce
State 31 conflicts: 3 shift/reduce
State 32 conflicts: 3 shift/reduce
State 47 conflicts: 3 shift/reduce
State 49 conflicts: 3 shift/reduce
State 50 conflicts: 3 shift/reduce
State 52 conflicts: 3 shift/reduce
State 53 conflicts: 3 shift/reduce
State 54 conflicts: 3 shift/reduce
State 55 conflicts: 3 shift/reduce
State 56 conflicts: 3 shift/reduce
State 70 conflicts: 3 shift/reduce
State 71 conflicts: 3 shift/reduce
State 72 conflicts: 3 shift/reduce
State 73 conflicts: 3 shift/reduce
State 74 conflicts: 3 shift/reduce
State 75 conflicts: 3 shift/reduce
State 76 conflicts: 3 shift/reduce
State 77 conflicts: 3 shift/reduce
State 78 conflicts: 3 shift/reduce
State 79 conflicts: 3 shift/reduce
State 80 conflicts: 3 shift/reduce
State 82 conflicts: 3 shift/reduce
State 83 conflicts: 3 shift/reduce
State 84 conflicts: 3 shift/reduce
State 85 conflicts: 3 shift/reduce
State 86 conflicts: 3 shift/reduce
State 87 conflicts: 3 shift/reduce
State 88 conflicts: 3 shift/reduce
State 89 conflicts: 3 shift/reduce
State 90 conflicts: 3 shift/reduce
State 91 conflicts: 3 shift/reduce
State 92 conflicts: 3 shift/reduce
State 94 conflicts: 1 shift/reduce
State 95 conflicts: 3 shift/reduce
State 96 conflicts: 3 shift/reduce
State 97 conflicts: 3 shift/reduce
State 98 conflicts: 3 shift/reduce
State 108 conflicts: 3 shift/reduce
State 109 conflicts: 3 shift/reduce
State 110 conflicts: 3 shift/reduce
State 118 conflicts: 3 shift/reduce
State 119 conflicts: 3 shift/reduce
State 120 conflicts: 3 shift/reduce
State 121 conflicts: 3 shift/reduce
State 122 conflicts: 3 shift/reduce
State 123 conflicts: 3 shift/reduce
State 124 conflicts: 3 shift/reduce
State 125 conflicts: 3 shift/reduce
State 127 conflicts: 3 shift/reduce
State 129 conflicts: 3 shift/reduce
State 134 conflicts: 3 shift/reduce
State 137 conflicts: 3 shift/reduce
State 141 conflicts: 3 shift/reduce
State 144 conflicts: 3 shift/reduce
State 145 conflicts: 3 shift/reduce
State 146 conflicts: 3 shift/reduce
State 149 conflicts: 3 shift/reduce
State 154 conflicts: 3 shift/reduce
State 158 conflicts: 3 shift/reduce
State 160 conflicts: 3 shift/reduce
State 163 conflicts: 3 shift/reduce
State 164 conflicts: 3 shift/reduce
State 165 conflicts: 3 shift/reduce
State 168 conflicts: 3 shift/reduce
State 169 conflicts: 3 shift/reduce
State 173 conflicts: 14 shift/reduce
State 177 conflicts: 3 shift/reduce
State 180 conflicts: 3 shift/reduce
State 181 conflicts: 3 shift/reduce
State 182 conflicts: 3 shift/reduce
State 183 conflicts: 3 shift/reduce
State 186 conflicts: 3 shift/reduce
State 187 conflicts: 3 shift/reduce
State 188 conflicts: 3 shift/reduce
State 189 conflicts: 3 shift/reduce
State 193 conflicts: 15 shift/reduce
State 198 conflicts: 3 shift/reduce
State 201 conflicts: 3 shift/reduce
State 202 conflicts: 3 shift/reduce
State 203 conflicts: 3 shift/reduce
State 206 conflicts: 3 shift/reduce
State 207 conflicts: 3 shift/reduce
State 208 conflicts: 3 shift/reduce
State 209 conflicts: 3 shift/reduce
State 212 conflicts: 3 shift/reduce
State 213 conflicts: 3 shift/reduce
State 221 conflicts: 3 shift/reduce
State 222 conflicts: 3 shift/reduce
State 223 conflicts: 3 shift/reduce
State 226 conflicts: 3 shift/reduce
State 227 conflicts: 3 shift/reduce
State 228 conflicts: 3 shift/reduce
State 229 conflicts: 3 shift/reduce
State 230 conflicts: 3 shift/reduce
State 234 conflicts: 3 shift/reduce
State 235 conflicts: 3 shift/reduce
State 237 conflicts: 3 shift/reduce
State 238 conflicts: 3 shift/reduce
State 240 conflicts: 3 shift/reduce
State 242 conflicts: 6 shift/reduce
State 243 conflicts: 3 shift/reduce
State 244 conflicts: 3 shift/reduce
State 247 conflicts: 3 shift/reduce
State 248 conflicts: 3 shift/reduce
State 249 conflicts: 3 shift/reduce
State 250 conflicts: 3 shift/reduce
State 251 conflicts: 3 shift/reduce
State 254 conflicts: 3 shift/reduce
State 256 conflicts: 3 shift/reduce
State 264 conflicts: 3 shift/reduce
State 265 conflicts: 3 shift/reduce
State 266 conflicts: 3 shift/reduce
State 267 conflicts: 3 shift/reduce
State 268 conflicts: 3 shift/reduce
State 270 conflicts: 3 shift/reduce
State 271 conflicts: 3 shift/reduce
State 272 conflicts: 3 shift/reduce
State 275 conflicts: 3 shift/reduce
State 276 conflicts: 3 shift/reduce
State 277 conflicts: 3 shift/reduce
State 278 conflicts: 3 shift/reduce
State 279 conflicts: 3 shift/reduce
State 282 conflicts: 3 shift/reduce
State 284 conflicts: 3 shift/reduce
State 285 conflicts: 3 shift/reduce, 4 reduce/reduce
State 287 conflicts: 3 shift/reduce
State 289 conflicts: 3 shift/reduce
State 290 conflicts: 3 shift/reduce
State 291 conflicts: 3 shift/reduce
State 292 conflicts: 3 shift/reduce
State 294 conflicts: 3 shift/reduce
State 297 conflicts: 3 shift/reduce
State 298 conflicts: 3 shift/reduce
State 299 conflicts: 3 shift/reduce
State 300 conflicts: 3 shift/reduce
State 301 conflicts: 3 shift/reduce
State 302 conflicts: 3 shift/reduce
State 305 conflicts: 3 shift/reduce
State 307 conflicts: 3 shift/reduce
State 308 conflicts: 3 shift/reduce
State 309 conflicts: 3 shift/reduce
State 310 conflicts: 3 shift/reduce
State 311 conflicts: 3 shift/reduce
State 312 conflicts: 3 shift/reduce
State 318 conflicts: 3 shift/reduce
State 321 conflicts: 3 shift/reduce
State 322 conflicts: 3 shift/reduce
State 323 conflicts: 3 shift/reduce
State 326 conflicts: 3 shift/reduce
State 328 conflicts: 3 shift/reduce
State 329 conflicts: 3 shift/reduce
State 330 conflicts: 3 shift/reduce
State 337 conflicts: 3 shift/reduce
State 341 conflicts: 3 shift/reduce
State 342 conflicts: 6 shift/reduce
State 345 conflicts: 6 shift/reduce
State 347 conflicts: 6 shift/reduce
State 348 conflicts: 6 shift/reduce
State 349 conflicts: 6 shift/reduce
State 350 conflicts: 6 shift/reduce
State 352 conflicts: 3 shift/reduce
State 356 conflicts: 3 shift/reduce
State 359 conflicts: 3 shift/reduce
State 362 conflicts: 3 shift/reduce
State 364 conflicts: 3 shift/reduce
State 366 conflicts: 3 shift/reduce
State 368 conflicts: 3 shift/reduce
State 371 conflicts: 3 shift/reduce
State 373 conflicts: 3 shift/reduce
State 376 conflicts: 3 shift/reduce
State 377 conflicts: 3 shift/reduce
State 380 conflicts: 3 shift/reduce


Grammar

    0 $accept: mainstmt $end

    1 mainstmt: ws INT ws TMAIN ws '(' ws ')' ws '{' ws code ws '}' ws END

    2 ws: '\n'
    3   | '\t'
    4   | ' '
    5   | epsilon

    6 code: ws stmts ws

    7 epsilon: /* empty */

    8 stmt: ws expr ws ';' ws
    9     | ws expr ws ';' ws stmt ws

   10 estmt: ws '=' ws expr ws ';' ws
   11      | ws expr ws ';' ws stmt ws

   12 expr: ws expr ws '-' ws sum ws
   13     | ws sum ws

   14 sum: ws sum ws '+' ws product ws
   15    | ws product ws

   16 product: ws product ws '*' ws fraction ws
   17        | ws fraction ws

   18 fraction: ws fraction ws '/' ws lessthan ws
   19         | ws lessthan ws

   20 lessthan: ws lessthan ws '<' ws equals ws
   21         | ws equals ws

   22 equals: ws equals ws EQUALSCHECK ws greaterthan ws
   23       | ws greaterthan ws

   24 greaterthan: ws greaterthan ws '>' ws factor ws
   25            | ws factor ws

   26 factor: ws NUMBER ws
   27       | ws '(' ws expr ws ')' ws
   28       | ws IDENT ws

   29 declaration: ws INT ws IDENT ws
   30            | ws FLOAT ws IDENT ws
   31            | ws CHAR ws IDENT ws
   32            | ws LONG ws IDENT ws
   33            | ws SHORT ws IDENT ws
   34            | ws DOUBLE ws IDENT ws

   35 initialisation: declaration ws estmt ws
   36               | epsilon

   37 stmts: ws declaration ws ';' ws stmts ws
   38      | ws initialisation ws stmts ws
   39      | ws ifelsestmt ws stmts ws
   40      | ws whilestmt ws stmts ws
   41      | ws dowhilestmt ws stmts ws
   42      | ws forstmt ws stmts ws
   43      | ws switchstmt ws stmts ws
   44      | ws epsilon ws
   45      | ws assignment ws ';' ws

   46 assignment: ws IDENT ws '=' ws expr ws

   47 ifelsestmt: ws ifstmt ws elseifstmt ws elsestmt ws

   48 ifstmt: ws IF ws '(' ws expr ws ')' ws '{' ws code ws '}' ws

   49 elsestmt: ws ELSE ws '(' ws ')' ws '{' ws code ws '}' ws
   50         | ws epsilon ws

   51 elseifstmt: ws ELSE ws ifstmt ws elseifstmt ws
   52           | ws epsilon ws

   53 loopcode: ws loopcode ws BREAK ws ';' ws loopcode ws
   54         | ws loopcode ws CONTINUE ws ';' ws loopcode ws
   55         | code

   56 whilestmt: ws WHILE ws '(' ws expr ws ')' ws '{' ws loopcode ws '}' ws

   57 dowhilestmt: ws DO ws '{' ws loopcode ws '}' ws WHILE ws '(' ws expr ws ')' ws ';' ws

   58 forstmt: ws FOR ws '(' ws assignment ws ';' ws IDENT ws condition ws expr ws ';' ws assignment ws ')' ws '{' ws loopcode ws '}' ws

   59 switchstmt: ws SWITCH ws '(' ws expr ws ')' ws '{' ws casestmt ws '}' ws

   60 casestmt: ws CASE ws expr ws ':' ws code ws casestmt ws
   61         | epsilon

   62 condition: '<'
   63          | '>'
   64          | EQUALSCHECK


Terminals, with rules where they appear

$end (0) 0
'\t' (9) 3
'\n' (10) 2
' ' (32) 4
'(' (40) 1 27 48 49 56 57 58 59
')' (41) 1 27 48 49 56 57 58 59
'*' (42) 16
'+' (43) 14
'-' (45) 12
'/' (47) 18
':' (58) 60
';' (59) 8 9 10 11 37 45 53 54 57 58
'<' (60) 20 62
'=' (61) 10 46
'>' (62) 24 63
'{' (123) 1 48 49 56 57 58 59
'}' (125) 1 48 49 56 57 58 59
error (256)
IDENT (258) 28 29 30 31 32 33 34 46 58
IF (259) 48
TMAIN (260) 1
ELSE (261) 49 51
WHILE (262) 56 57
SWITCH (263) 59
CASE (264) 60
INT (265) 1 29
FLOAT (266) 30
DOUBLE (267) 34
LONG (268) 32
SHORT (269) 33
CHAR (270) 31
FOR (271) 58
DO (272) 57
BREAK (273) 53
CONTINUE (274) 54
EQUALSCHECK (275) 22 64
NUMBER (276) 26
END (277) 1


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
mainstmt (40)
    on left: 1, on right: 0
ws (41)
    on left: 2 3 4 5, on right: 1 6 8 9 10 11 12 13 14 15 16 17 18
    19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 37 38 39 40
    41 42 43 44 45 46 47 48 49 50 51 52 53 54 56 57 58 59 60
code (42)
    on left: 6, on right: 1 48 49 55 60
epsilon (43)
    on left: 7, on right: 5 36 44 50 52 61
stmt (44)
    on left: 8 9, on right: 9 11
estmt (45)
    on left: 10 11, on right: 35
expr (46)
    on left: 12 13, on right: 8 9 10 11 12 27 46 48 56 57 58 59 60
sum (47)
    on left: 14 15, on right: 12 13 14
product (48)
    on left: 16 17, on right: 14 15 16
fraction (49)
    on left: 18 19, on right: 16 17 18
lessthan (50)
    on left: 20 21, on right: 18 19 20
equals (51)
    on left: 22 23, on right: 20 21 22
greaterthan (52)
    on left: 24 25, on right: 22 23 24
factor (53)
    on left: 26 27 28, on right: 24 25
declaration (54)
    on left: 29 30 31 32 33 34, on right: 35 37
initialisation (55)
    on left: 35 36, on right: 38
stmts (56)
    on left: 37 38 39 40 41 42 43 44 45, on right: 6 37 38 39 40 41
    42 43
assignment (57)
    on left: 46, on right: 45 58
ifelsestmt (58)
    on left: 47, on right: 39
ifstmt (59)
    on left: 48, on right: 47 51
elsestmt (60)
    on left: 49 50, on right: 47
elseifstmt (61)
    on left: 51 52, on right: 47 51
loopcode (62)
    on left: 53 54 55, on right: 53 54 56 57 58
whilestmt (63)
    on left: 56, on right: 40
dowhilestmt (64)
    on left: 57, on right: 41
forstmt (65)
    on left: 58, on right: 42
switchstmt (66)
    on left: 59, on right: 43
casestmt (67)
    on left: 60 61, on right: 59 60
condition (68)
    on left: 62 63 64, on right: 58


State 0

    0 $accept: . mainstmt $end

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    mainstmt  go to state 4
    ws        go to state 5
    epsilon   go to state 6


State 1

    2 ws: '\n' .

    $default  reduce using rule 2 (ws)


State 2

    3 ws: '\t' .

    $default  reduce using rule 3 (ws)


State 3

    4 ws: ' ' .

    $default  reduce using rule 4 (ws)


State 4

    0 $accept: mainstmt . $end

    $end  shift, and go to state 7


State 5

    1 mainstmt: ws . INT ws TMAIN ws '(' ws ')' ws '{' ws code ws '}' ws END

    INT  shift, and go to state 8


State 6

    5 ws: epsilon .

    $default  reduce using rule 5 (ws)


State 7

    0 $accept: mainstmt $end .

    $default  accept


State 8

    1 mainstmt: ws INT . ws TMAIN ws '(' ws ')' ws '{' ws code ws '}' ws END

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 9
    epsilon  go to state 6


State 9

    1 mainstmt: ws INT ws . TMAIN ws '(' ws ')' ws '{' ws code ws '}' ws END

    TMAIN  shift, and go to state 10


State 10

    1 mainstmt: ws INT ws TMAIN . ws '(' ws ')' ws '{' ws code ws '}' ws END

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 11
    epsilon  go to state 6


State 11

    1 mainstmt: ws INT ws TMAIN ws . '(' ws ')' ws '{' ws code ws '}' ws END

    '('  shift, and go to state 12


State 12

    1 mainstmt: ws INT ws TMAIN ws '(' . ws ')' ws '{' ws code ws '}' ws END

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 13
    epsilon  go to state 6


State 13

    1 mainstmt: ws INT ws TMAIN ws '(' ws . ')' ws '{' ws code ws '}' ws END

    ')'  shift, and go to state 14


State 14

    1 mainstmt: ws INT ws TMAIN ws '(' ws ')' . ws '{' ws code ws '}' ws END

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 15
    epsilon  go to state 6


State 15

    1 mainstmt: ws INT ws TMAIN ws '(' ws ')' ws . '{' ws code ws '}' ws END

    '{'  shift, and go to state 16


State 16

    1 mainstmt: ws INT ws TMAIN ws '(' ws ')' ws '{' . ws code ws '}' ws END

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 17
    epsilon  go to state 6


State 17

    1 mainstmt: ws INT ws TMAIN ws '(' ws ')' ws '{' ws . code ws '}' ws END

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 18
    code     go to state 19
    epsilon  go to state 6


State 18

    6 code: ws . stmts ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 20
    epsilon  go to state 6
    stmts    go to state 21


State 19

    1 mainstmt: ws INT ws TMAIN ws '(' ws ')' ws '{' ws code . ws '}' ws END

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 22
    epsilon  go to state 6


State 20

   37 stmts: ws . declaration ws ';' ws stmts ws
   38      | ws . initialisation ws stmts ws
   39      | ws . ifelsestmt ws stmts ws
   40      | ws . whilestmt ws stmts ws
   41      | ws . dowhilestmt ws stmts ws
   42      | ws . forstmt ws stmts ws
   43      | ws . switchstmt ws stmts ws
   44      | ws . epsilon ws
   45      | ws . assignment ws ';' ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws              go to state 23
    epsilon         go to state 24
    declaration     go to state 25
    initialisation  go to state 26
    assignment      go to state 27
    ifelsestmt      go to state 28
    whilestmt       go to state 29
    dowhilestmt     go to state 30
    forstmt         go to state 31
    switchstmt      go to state 32


State 21

    6 code: ws stmts . ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 33
    epsilon  go to state 6


State 22

    1 mainstmt: ws INT ws TMAIN ws '(' ws ')' ws '{' ws code ws . '}' ws END

    '}'  shift, and go to state 34


State 23

   29 declaration: ws . INT ws IDENT ws
   30            | ws . FLOAT ws IDENT ws
   31            | ws . CHAR ws IDENT ws
   32            | ws . LONG ws IDENT ws
   33            | ws . SHORT ws IDENT ws
   34            | ws . DOUBLE ws IDENT ws
   46 assignment: ws . IDENT ws '=' ws expr ws
   47 ifelsestmt: ws . ifstmt ws elseifstmt ws elsestmt ws
   56 whilestmt: ws . WHILE ws '(' ws expr ws ')' ws '{' ws loopcode ws '}' ws
   57 dowhilestmt: ws . DO ws '{' ws loopcode ws '}' ws WHILE ws '(' ws expr ws ')' ws ';' ws
   58 forstmt: ws . FOR ws '(' ws assignment ws ';' ws IDENT ws condition ws expr ws ';' ws assignment ws ')' ws '{' ws loopcode ws '}' ws
   59 switchstmt: ws . SWITCH ws '(' ws expr ws ')' ws '{' ws casestmt ws '}' ws

    IDENT   shift, and go to state 35
    WHILE   shift, and go to state 36
    SWITCH  shift, and go to state 37
    INT     shift, and go to state 38
    FLOAT   shift, and go to state 39
    DOUBLE  shift, and go to state 40
    LONG    shift, and go to state 41
    SHORT   shift, and go to state 42
    CHAR    shift, and go to state 43
    FOR     shift, and go to state 44
    DO      shift, and go to state 45
    '\n'    shift, and go to state 1
    '\t'    shift, and go to state 2
    ' '     shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 46
    epsilon  go to state 6
    ifstmt   go to state 47


State 24

    5 ws: epsilon .
   36 initialisation: epsilon .
   44 stmts: ws epsilon . ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    IDENT     reduce using rule 5 (ws)
    IDENT     [reduce using rule 36 (initialisation)]
    IF        reduce using rule 5 (ws)
    IF        [reduce using rule 36 (initialisation)]
    WHILE     reduce using rule 5 (ws)
    WHILE     [reduce using rule 36 (initialisation)]
    SWITCH    reduce using rule 5 (ws)
    SWITCH    [reduce using rule 36 (initialisation)]
    CASE      reduce using rule 7 (epsilon)
    CASE      [reduce using rule 36 (initialisation)]
    INT       reduce using rule 5 (ws)
    INT       [reduce using rule 36 (initialisation)]
    FLOAT     reduce using rule 5 (ws)
    FLOAT     [reduce using rule 36 (initialisation)]
    DOUBLE    reduce using rule 5 (ws)
    DOUBLE    [reduce using rule 36 (initialisation)]
    LONG      reduce using rule 5 (ws)
    LONG      [reduce using rule 36 (initialisation)]
    SHORT     reduce using rule 5 (ws)
    SHORT     [reduce using rule 36 (initialisation)]
    CHAR      reduce using rule 5 (ws)
    CHAR      [reduce using rule 36 (initialisation)]
    FOR       reduce using rule 5 (ws)
    FOR       [reduce using rule 36 (initialisation)]
    DO        reduce using rule 5 (ws)
    DO        [reduce using rule 36 (initialisation)]
    BREAK     reduce using rule 5 (ws)
    BREAK     [reduce using rule 7 (epsilon)]
    BREAK     [reduce using rule 36 (initialisation)]
    CONTINUE  reduce using rule 5 (ws)
    CONTINUE  [reduce using rule 7 (epsilon)]
    CONTINUE  [reduce using rule 36 (initialisation)]
    '}'       reduce using rule 7 (epsilon)
    '}'       [reduce using rule 36 (initialisation)]
    '\n'      [reduce using rule 5 (ws)]
    '\n'      [reduce using rule 7 (epsilon)]
    '\n'      [reduce using rule 36 (initialisation)]
    '\t'      [reduce using rule 5 (ws)]
    '\t'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 36 (initialisation)]
    ' '       [reduce using rule 5 (ws)]
    ' '       [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 36 (initialisation)]
    $default  reduce using rule 5 (ws)

    ws       go to state 48
    epsilon  go to state 6


State 25

   35 initialisation: declaration . ws estmt ws
   37 stmts: ws declaration . ws ';' ws stmts ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 49
    epsilon  go to state 6


State 26

   38 stmts: ws initialisation . ws stmts ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 50
    epsilon  go to state 6


State 27

   45 stmts: ws assignment . ws ';' ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 51
    epsilon  go to state 6


State 28

   39 stmts: ws ifelsestmt . ws stmts ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 52
    epsilon  go to state 6


State 29

   40 stmts: ws whilestmt . ws stmts ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 53
    epsilon  go to state 6


State 30

   41 stmts: ws dowhilestmt . ws stmts ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 54
    epsilon  go to state 6


State 31

   42 stmts: ws forstmt . ws stmts ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 55
    epsilon  go to state 6


State 32

   43 stmts: ws switchstmt . ws stmts ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 56
    epsilon  go to state 6


State 33

    6 code: ws stmts ws .

    $default  reduce using rule 6 (code)


State 34

    1 mainstmt: ws INT ws TMAIN ws '(' ws ')' ws '{' ws code ws '}' . ws END

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 57
    epsilon  go to state 6


State 35

   46 assignment: ws IDENT . ws '=' ws expr ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 58
    epsilon  go to state 6


State 36

   56 whilestmt: ws WHILE . ws '(' ws expr ws ')' ws '{' ws loopcode ws '}' ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 59
    epsilon  go to state 6


State 37

   59 switchstmt: ws SWITCH . ws '(' ws expr ws ')' ws '{' ws casestmt ws '}' ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 60
    epsilon  go to state 6


State 38

   29 declaration: ws INT . ws IDENT ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 61
    epsilon  go to state 6


State 39

   30 declaration: ws FLOAT . ws IDENT ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 62
    epsilon  go to state 6


State 40

   34 declaration: ws DOUBLE . ws IDENT ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 63
    epsilon  go to state 6


State 41

   32 declaration: ws LONG . ws IDENT ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 64
    epsilon  go to state 6


State 42

   33 declaration: ws SHORT . ws IDENT ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 65
    epsilon  go to state 6


State 43

   31 declaration: ws CHAR . ws IDENT ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 66
    epsilon  go to state 6


State 44

   58 forstmt: ws FOR . ws '(' ws assignment ws ';' ws IDENT ws condition ws expr ws ';' ws assignment ws ')' ws '{' ws loopcode ws '}' ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 67
    epsilon  go to state 6


State 45

   57 dowhilestmt: ws DO . ws '{' ws loopcode ws '}' ws WHILE ws '(' ws expr ws ')' ws ';' ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    $default  reduce using rule 7 (epsilon)

    ws       go to state 68
    epsilon  go to state 6


State 46

   48 ifstmt: ws . IF ws '(' ws expr ws ')' ws '{' ws code ws '}' ws

    IF  shift, and go to state 69


State 47

   47 ifelsestmt: ws ifstmt . ws elseifstmt ws elsestmt ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 70
    epsilon  go to state 6


State 48

   44 stmts: ws epsilon ws .

    $default  reduce using rule 44 (stmts)


State 49

   35 initialisation: declaration ws . estmt ws
   37 stmts: ws declaration ws . ';' ws stmts ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3
    ';'   shift, and go to state 71

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 72
    epsilon  go to state 6
    estmt    go to state 73


State 50

   38 stmts: ws initialisation ws . stmts ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 20
    epsilon  go to state 6
    stmts    go to state 74


State 51

   45 stmts: ws assignment ws . ';' ws

    ';'  shift, and go to state 75


State 52

   39 stmts: ws ifelsestmt ws . stmts ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3

    '\n'      [reduce using rule 7 (epsilon)]
    '\t'      [reduce using rule 7 (epsilon)]
    ' '       [reduce using rule 7 (epsilon)]
    $default  reduce using rule 7 (epsilon)

    ws       go to state 20
    epsilon  go to state 6
    stmts    go to state 76


State 53

   40 stmts: ws whilestmt ws . stmts ws

    '\n'  shift, and go to state 1
    '\t'  shift, and go to state 2
    ' '   shift, and go to state 3
